# DaisyWind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  aerich.ini  config.py  docker-compose.yml  main.py  pyproject.toml
.claude/: launch.json
backend/app/agents/: __init__.py  chat_agent.py  deps.py  pricing.py  providers.py
backend/app/api/: __init__.py
backend/app/core/: depends.py  exception_handlers.py  exceptions.py  middlewares.py  playground.py  redis.py  response.py  security.py  storage.py
backend/app/db/: base.py  mysql.py  postgresql.py
backend/app/user/: models.py
backend/migrations/: 0001_initial.py  0002_seed_admin.py  0003_chat_about_model.py  0004_rename_conversation_model.py  0005_chat_message_content_to_jsonb.py  0006_history_model_change.py  0007_drop_redundant_unique_indexes.py  0008_add_ingestion_tables.py  0009_add_ingestion_run_last_event_seq.py  __init__.py
docs/: chat-architecture-reflection.md  chat-architecture.md  context.md  design-tokens.md  ingestion-architecture.md  migrations.md  nano-banana-integration.md  notes.md  product-scope.md  refactor-phase-b-brief.md  roadmap.md  streaming-render.md
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  app.css  main.ts
migrations/models/: 0_20260202235547_init.py  0_20260306105408_init.py  1_20260203000014_init_admin.py  1_20260306110810_init_admin_user.py  2_20260211102526_add_nickname_and_rank_title.py  2_20260308183147_add_note_model.py  3_20260212164150_add_chat_models.py
(+84 files in other folders)
